feat: validate user_code for CIBA requests.
fixes gravitee-io/issues#7153